# SCPWorld

./: .env.example  .firebaserc  .gitignore  README.md  firebase.json  firestore.indexes.json  firestore.rules
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/core/: personas.py
backend/app/middleware/: auth.py
backend/app/models/: schemas.py
backend/app/routers/: auth.py  chat.py  health.py
backend/app/services/: embedding_service.py  llm_service.py  memory_service.py  prompt_service.py  rag_service.py  response_filter.py  storage_service.py
backend/tests/: test_memory_service.py  test_response_filter.py
data-pipeline/: pyproject.toml
data-pipeline/config/: scp_target_list.json
data-pipeline/scripts/: preprocess.py  scrape_scp.py  upload_to_firestore.py  validate_firestore.py
docs/: architecture.md  deployment.md  frontend_screens.md
frontend/: pubspec.yaml
frontend/lib/config/: constants.dart
frontend/lib/providers/: auth_provider.dart  chat_provider.dart
frontend/lib/screens/: chat_screen.dart  login_screen.dart
infra/: deploy-backend-cloudrun.ps1  deploy-backend-cloudrun.sh  deploy-vllm-cloudrun.ps1  deploy-vllm-cloudrun.sh  setup-artifact-registry.sh  vllm-service.yaml
